<resources>
    <string name="app_name">CineQuiz</string>
    <!-- navigation -->
    <string name="navigation_start">Start Over</string>
    <string name="navigation_next">Next Page</string>
    <!-- titles -->
    <!--    <string name="first_question_title">First Question</string>-->
    <string name="option_one">Option 1</string>
    <string name="option_two">Option 2</string>
    <string name="option_three">Option 3\n</string>
    <string name="option_four">Option 4</string>
    <!--    <string name="second_question_title">Second Question</string>-->
    <!--    <string name="third_question_title">Third Question</string>-->
    <string name="cameron">Cameron</string>
    <string name="spielberg">Spielberg</string>
    <string name="george_lucas">George Lucas</string>
    <string name="ridley_scott">Ridley Scott</string>
    <!--    <string name="fourth_question_title">Fourth Question</string>-->
    <string name="first_answer">Answer 1</string>
    <string name="second_answer">Answer 2</string>
    <string name="third_answer">Answer 3</string>
    <string name="fourth_answer">Answer 4</string>
    <!--    <string name="fifth_question_title">Fifth Question</string>-->
    <string name="switch_one">Switch 1</string>
    <string name="switch_two">Switch 2</string>
    <string name="switch_three">Switch 3</string>
    <string name="switch_four">Switch 4</string>
    <!--    <string name="score_title">Score</string>-->
    <!-- score -->
    <string name="score_subtitle">SCORE</string>
    <string name="score_button">Start Again</string>
    <!-- error dialog -->
    <string name="error_dialog_text">Incorrect answer. Please try again.</string>
    <!-- block on next dialog -->
    <string name="block_on_next_dialog_text">Please select the correct answer before going to the next question.</string>
    <!-- correct toast -->
    <string name="correct_toast_text">Correct answer! Go to next question.</string>
    <!-- first question -->
    <string name="first_question_question">Who is the main character in the movie "The Lion King"?</string>
    <string name="first_question_first_answer">Simba</string>
    <string name="first_question_second_answer">Mufasa</string>
    <string name="first_question_third_answer">Scar</string>
    <string name="first_question_fourth_answer">Timon</string>
    <!-- second question -->
    <string name="second_question_question">Which movie won the Academy Award for Best Picture in 1994?</string>
    <string name="second_question_first_answer">Pulp Fiction</string>
    <string name="second_question_second_answer">The Shawshank Redemption</string>
    <string name="second_question_third_answer">Forrest Gump</string>
    <string name="second_question_fourth_answer">The Lion King</string>
    <!-- third question -->
    <string name="third_question_question">Who directed the 1993 movie Jurassic Park?</string>
    <string name="third_question_first_answer">Cameron</string>
    <string name="third_question_second_answer">Spielberg</string>
    <string name="third_question_third_answer">Lucas</string>
    <string name="third_question_fourth_answer">Scott</string>
    <!-- fourth question -->
    <string name="fourth_question_question">Which actor played the role of Jack Dawson in the movie Titanic?</string>
    <string name="fourth_question_first_answer">Brad Pitt</string>
    <string name="fourth_question_second_answer">Johnny Depp</string>
    <string name="fourth_question_third_answer">Leonardo Di Caprio</string>
    <string name="fourth_question_fourth_answer">Matt Damon</string>
    <!-- fifth question -->
    <string name="fifth_question_question">In which movie does the character &quot;Tony Stark&quot; first appear in the Marvel Cinematic Universe?</string>
    <string name="fifth_question_first_answer">Thor</string>
    <string name="fifth_question_second_answer">Captain America:\nThe First Avenger</string>
    <string name="fifth_question_third_answer">Iron Man</string>
    <string name="fifth_question_fourth_answer">The Avengers</string>
    <string name="settings">settings</string>

    <!-- Settings -->
    <string name="manual_title">User Manual</string>
    <string name="manual_content">Welcome to the manual! Here you can find detailed instructions on how to use the app effectively...</string>
    <string name="manual_image_description">An illustrative image for the manual.</string>
    <string name="close">Close</string>
    <string name="after_a_success_three_points_are_added_to_the_accumulated_points">After a success three points are added to the accumulated points</string>
    <string name="textView3">Failure Consequence: Incorrect answers subtract two points. You can either continue or restart the game.</string>
    <string name="textView1">Success Reward: Correct answers add three points to your score.</string>
    <string name="this_is_the_manual">This is the manual!</string>
    <string name="success_reward_correct_answers_add_three_points_to_your_score">Success Reward: Correct answers add three points to your score.</string>
    <string name="failure_consequence_incorrect_answers_subtract_two_points_you_can_either_continue_or_restart_the_game">Failure Consequence: Incorrect answers subtract two points. You can either continue or restart the game.</string>
    <string name="Close">Close</string>






</resources>