<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.questions.SecondQuestionFragment">

    <TextView
        android:id="@+id/second_question_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="85dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <RadioGroup
        android:id="@+id/second_question_answer_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_question_question" >

        <RadioButton
            android:id="@+id/second_question_first_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_answer" />

        <RadioButton
            android:id="@+id/second_question_second_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_answer" />

        <RadioButton
            android:id="@+id/second_question_third_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_answer" />

        <RadioButton
            android:id="@+id/second_question_fourth_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fourth_answer" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>