<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Manual Text -->
    <TextView
        android:id="@+id/manualText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_is_the_manual"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <!-- Success Reward Text -->

    <!-- Failure Consequence Text -->

    <!-- Close Button -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="302dp"
        android:layout_height="72dp"
        android:text="@string/success_reward_correct_answers_add_three_points_to_your_score"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="95dp"
        android:text="@string/failure_consequence_incorrect_answers_subtract_two_points_you_can_either_continue_or_restart_the_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onCloseManual"
        android:text="@string/Close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintVertical_bias="0.532" />

</androidx.constraintlayout.widget.ConstraintLayout>
