<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.questions.ThirdQuestionFragment">

    <TextView
        android:id="@+id/third_question_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="85dp"
        android:text="@string/third_question_question"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <LinearLayout
        android:id="@+id/third_question_first_answer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/third_question_second_answer_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_question_question"
        app:layout_constraintVertical_bias="0.0" >

        <ImageButton
            android:id="@+id/third_question_first_answer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/third_question_first_answer"
            android:scaleType="centerCrop"
            android:src="@drawable/cameron" />

        <TextView
            android:id="@+id/third_question_first_answer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/third_question_first_answer" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_question_second_answer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.680"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_question_question"
        app:layout_constraintVertical_bias="0.0" >

        <ImageButton
            android:id="@+id/third_question_second_answer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/third_question_second_answer"
            android:scaleType="centerCrop"
            android:src="@drawable/spielberg" />

        <TextView
            android:id="@+id/third_question_second_answer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/third_question_second_answer" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_question_third_answer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="22dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/third_question_fourth_answer_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_question_first_answer_layout"
        app:layout_constraintVertical_bias="0.0" >

        <ImageButton
            android:id="@+id/third_question_third_answer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/third_question_third_answer"
            android:scaleType="centerCrop"
            android:src="@drawable/george_lucas" />

        <TextView
            android:id="@+id/third_question_third_answer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/third_question_third_answer" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_question_fourth_answer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.680"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_question_second_answer_layout"
        app:layout_constraintVertical_bias="0.0" >

        <ImageButton
            android:id="@+id/third_question_fourth_answer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/third_question_fourth_answer"
            android:scaleType="centerCrop"
            android:src="@drawable/ridley_scott" />

        <TextView
            android:id="@+id/third_question_fourth_answer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/third_question_fourth_answer" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>