<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.questions.FifthQuestionFragment">

    <TextView
        android:id="@+id/fifth_question_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="85dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <LinearLayout
        android:id="@+id/fifth_question_first_answer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifth_question_question" >

        <Switch
            android:id="@+id/fifth_question_first_answer"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:contentDescription="@string/switch_one"
            android:padding="13dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/fifth_question_first_answer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifth_question_second_answer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fifth_question_first_answer_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fifth_question_first_answer_layout"
        app:layout_constraintTop_toBottomOf="@+id/fifth_question_first_answer_layout"
        app:layout_constraintVertical_bias="0.0" >

        <Switch
            android:id="@+id/fifth_question_second_answer"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:contentDescription="@string/switch_two"
            android:padding="13dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/fifth_question_second_answer_text"
            android:layout_width="wrap_content"
            android:layout_height="39dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifth_question_third_answer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fifth_question_second_answer_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fifth_question_second_answer_layout"
        app:layout_constraintTop_toBottomOf="@+id/fifth_question_second_answer_layout"
        app:layout_constraintVertical_bias="0.0" >

        <Switch
            android:id="@+id/fifth_question_third_answer"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:contentDescription="@string/switch_three"
            android:padding="13dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/fifth_question_third_answer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifth_question_fourth_answer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fifth_question_third_answer_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fifth_question_third_answer_layout"
        app:layout_constraintTop_toBottomOf="@+id/fifth_question_third_answer_layout"
        app:layout_constraintVertical_bias="0.0" >

        <Switch
            android:id="@+id/fifth_question_fourth_answer"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:contentDescription="@string/switch_four"
            android:padding="13dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/fifth_question_fourth_answer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>